--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@entur/alert": "^0.9.1",
     "@entur/button": "^2.7.4",
     "@entur/form": "^4.4.7",
     "@entur/icons": "^1.20.0",
     "@entur/layout": "^1.10.4",
+    "@entur/loader": "^0.4.4",
     "@entur/menu": "^3.6.6",
+    "@entur/table": "^4.5.0",
     "@entur/tokens": "^3.3.0",
     "@entur/typography": "^1.6.10",
     "react": "^17.0.2",
