--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@entur/table": "4.5.0",
     "@entur/tokens": "3.3.0",
     "@entur/typography": "1.6.10",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
@@ -45,7 +47,17 @@
     "@types/react": "16.14.21",
     "@types/react-dom": "16.9.14",
     "@types/react-router-dom": "5.3.2",
-    "prettier": "2.4.1",
+    "prettier": "^2.4.1",
     "typescript": "4.5.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
