--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,8 +7,14 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 jobs:
-  build_and_deploy:
+  build_and_deploy_dev:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_AUTH0_DOMAIN: ror-entur-dev.eu.auth0.com
+      REACT_APP_AUTH0_CLIENT_ID: ojgOGhwqLWnzATwvn7keF3K15bHoAsMz
+      REACT_APP_AUTH0_AUDIENCE: https://ror.api.dev.entur.io
+      REACT_APP_AUTH0_RELATIVE_CALLBACK_URL: /
+      REACT_APP_TIMETABLE_VALIDATION_API_URL: https://api.dev.entur.io/timetable-public/v1/timetable-validation
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
@@ -20,3 +26,43 @@ jobs:
           projectId: udug-dev
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+  build_and_deploy_staging:
+    runs-on: ubuntu-latest
+    env:
+      REACT_APP_AUTH0_DOMAIN: ror-entur-staging.eu.auth0.com
+      REACT_APP_AUTH0_CLIENT_ID: ZkW5qmiRf1lJ0GtY3u26gJ7aM3uV5HGw
+      REACT_APP_AUTH0_AUDIENCE: https://ror.api.staging.entur.io
+      REACT_APP_AUTH0_RELATIVE_CALLBACK_URL: /
+      REACT_APP_TIMETABLE_VALIDATION_API_URL: https://api.staging.entur.io/timetable-public/v1/timetable-validation
+    steps:
+      - uses: actions/checkout@v2
+      - run: npm ci && npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UDUG_STAGING }}'
+          channelId: live
+          projectId: udug-staging
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
+  build_and_deploy_prod:
+    runs-on: ubuntu-latest
+    env:
+      REACT_APP_AUTH0_DOMAIN: auth2.entur.org
+      REACT_APP_AUTH0_CLIENT_ID: ObZmMZwUDtNOWUTkrcouV89Uxb1VvkkJ
+      REACT_APP_AUTH0_AUDIENCE: https://ror.api.entur.io
+      REACT_APP_AUTH0_RELATIVE_CALLBACK_URL: /
+      REACT_APP_TIMETABLE_VALIDATION_API_URL: https://api.entur.io/timetable-public/v1/timetable-validation
+    steps:
+      - uses: actions/checkout@v2
+      - run: npm ci && npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UDUG_PROD }}'
+          channelId: live
+          projectId: udug-prod
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
+
+
