--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@entur/layout": "2.1.4",
     "@entur/loader": "0.4.5",
     "@entur/menu": "4.0.6",
+    "@entur/micro-frontend": "^0.1.0",
     "@entur/modal": "1.5.10",
     "@entur/table": "4.5.4",
     "@entur/tokens": "3.3.1",
