--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,10 @@
       "headers": [ {
         "key": "Access-Control-Allow-Origin",
         "value": "*"
-      } ]
+      }, {
+        "key": "Access-Control-Allow-Headers",
+        "value": "*"
+      }]
     } ]
   }
 }
