--- a/firebase.json
+++ b/firebase.json
@@ -13,7 +13,7 @@
       }
     ],
     "headers": [ {
-      "source": "**/*.@(eot|otf|ttf|ttc|woff|css|js|map|json)",
+      "source": "**/*.@(eot|otf|ttf|ttc|woff|woff2|css|js|map|json)",
       "headers": [ {
         "key": "Access-Control-Allow-Origin",
         "value": "*"
