--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,3 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
-    }
-  ]
+  "extends": ["github>entur/ror-renovate-config"]
 }
