--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "28.1.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
