Fix project ids

--- a/.github/workflows/pull_request_build_and_deploy.yml
+++ b/.github/workflows/pull_request_build_and_deploy.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UDUG_DEV }}'
-          projectId: ent-ror-abzu-dev
+          projectId: udug-dev
