--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -52,7 +52,7 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UDUG_DEV }}'
           channelId: live
-          projectId: ent-ror-abzu-dev
+          projectId: udug-dev
   deploy_staging:
     runs-on: ubuntu-latest
     needs: [deploy_dev]
@@ -66,7 +66,7 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UDUG_STAGING }}'
           channelId: live
-          projectId: ent-ror-abzu-tst
+          projectId: udug-staging
   deploy_prod:
     runs-on: ubuntu-latest
     needs: [deploy_dev, deploy_staging]
@@ -80,4 +80,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UDUG_PROD }}'
           channelId: live
-          projectId: ent-ror-abzu-prd
+          projectId: udug-prod
