--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "lint-staged": "12.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "6.0.4",
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "npm run compile-i18n",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier src --write",
-    "check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "extract-i18n": "formatjs extract 'src/**/*.ts*' --ignore='**/*.d.ts' --out-file lang/en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
+    "compile-i18n": "formatjs compile lang/en.json --ast --out-file compiled-lang/en.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,11 +53,13 @@
     ]
   },
   "devDependencies": {
+    "@formatjs/cli": "5.0.2",
     "@types/jest": "28.1.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
     "prettier": "2.7.1",
+    "source-map-explorer": "2.5.2",
     "typescript": "4.7.4"
   },
   "husky": {
