Add sentry tracking

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -47,6 +47,8 @@ jobs:
       - run: npm run build
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
+        env:
+          REACT_APP_VERSION: $GITHUB_SHA
         with:
           name: build
           path: |
