--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@entur/table": "4.5.14",
     "@entur/tokens": "3.3.2",
     "@entur/typography": "1.6.14",
+    "@sentry/react": "7.3.1",
+    "@sentry/tracing": "7.3.1",
     "husky": "7.0.4",
     "lint-staged": "12.5.0",
     "react": "18.2.0",
